Clean up files, first draft of working dist.ini

--- a/source/dist.ini
+++ b/source/dist.ini
@@ -1,5 +1,5 @@
 name = App-Pebble
-#version = 0.108
+version = 0.001
 author = Johan Lindstrom <johanl@cpan.org>
 license = Perl_5
 copyright_holder = Johan Lindstrom
@@ -8,8 +8,12 @@ copyright_holder = Johan Lindstrom
 [MetaYAML]
 [MakeMaker]
 [Manifest]
+[License]
+[Readme]
+
+[PruneCruft]
 
 
-#[AutoPrereqs]
+[AutoPrereqs]
 [Prereqs]
 
