--- a/source/dist.ini
+++ b/source/dist.ini
@@ -4,16 +4,14 @@ author = Johan Lindstrom <johanl@cpan.org>
 license = Perl_5
 copyright_holder = Johan Lindstrom
 
-[GatherDir]
-[MetaYAML]
-[MakeMaker]
-[Manifest]
-[License]
-[Readme]
+[@Basic]
 
-[PruneCruft]
+
+[PodSyntaxTests]
 
 
 [AutoPrereqs]
+
+
 [Prereqs]
 
