dist.ini Git stuff

--- a/source/dist.ini
+++ b/source/dist.ini
@@ -1,11 +1,15 @@
 name = App-Pebble
-version = 0.001
 author = Johan Lindstrom <johanl@cpan.org>
 license = Perl_5
 copyright_holder = Johan Lindstrom
 
 [@Basic]
+[Git::NextVersion]
 
+[Git::Check]
+[Git::Commit]
+[Git::Tag]
+; [Git::Push]
 
 [PodSyntaxTests]
 
