--- a/source/dist.ini
+++ b/source/dist.ini
@@ -4,15 +4,19 @@ license = Perl_5
 copyright_holder = Johan Lindstrom
 
 [@Basic]
+
+; [TestRelease]
+[ConfirmRelease]
+; [XXXUploadToCPAN]
+
 [Git::NextVersion]
 
 [Git::Check]
 [Git::Commit]
 [Git::Tag]
-; [Git::Push]
+; [XXGit::Push]
 
 [PodSyntaxTests]
-
 
 [AutoPrereqs]
 
