dist.ini for Git etc

--- a/source/dist.ini
+++ b/source/dist.ini
@@ -3,18 +3,20 @@ author = Johan Lindstrom <johanl@cpan.org>
 license = Perl_5
 copyright_holder = Johan Lindstrom
 
-[@Basic]
+[Git::Check]
 
-; [TestRelease]
+[@Basic]
+[TestRelease]
 [ConfirmRelease]
 ; [XXXUploadToCPAN]
 
-[Git::NextVersion]
-
-[Git::Check]
 [Git::Commit]
 [Git::Tag]
+; [Git::CommitBuild]
 ; [XXGit::Push]
+[Git::NextVersion]
+
+; [NextRelease]
 
 [PodSyntaxTests]
 
