--- a/source/dist.ini
+++ b/source/dist.ini
@@ -5,10 +5,21 @@ copyright_holder = Johan Lindstrom
 
 [Git::Check]
 
-[@Basic]
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+[ExtraTests]
+[ExecDir]
+[ShareDir]
+[MakeMaker]
+[Manifest]
 [TestRelease]
+
 [ConfirmRelease]
-; [XXXUploadToCPAN]
+[UploadToCPAN]
 
 [Git::Commit]
 [Git::Tag]
@@ -16,7 +27,7 @@ copyright_holder = Johan Lindstrom
 ; [XXGit::Push]
 [Git::NextVersion]
 
-; [NextRelease]
+; [XXXNextRelease]
 
 [PodSyntaxTests]
 
