dist.ini Changes format, bin directory, restructure ini file

--- a/source/dist.ini
+++ b/source/dist.ini
@@ -18,6 +18,13 @@ copyright_holder = Johan Lindstrom
 [Manifest]
 [TestRelease]
 
+
+[ExecDir]
+[AutoPrereqs]
+
+[Prereqs]
+
+
 [ConfirmRelease]
 [UploadToCPAN]
 
@@ -27,12 +34,12 @@ copyright_holder = Johan Lindstrom
 ; [XXGit::Push]
 [Git::NextVersion]
 
+
 [NextRelease]
+time_zone = UTC
+format = %-6v -- %{yyyy-MM-dd HH:mm:ss VVVV}d
+
 
 [PodSyntaxTests]
 
-[AutoPrereqs]
-
-
-[Prereqs]
 
