Changes, dist.ini Changes format

--- a/source/dist.ini
+++ b/source/dist.ini
@@ -38,7 +38,7 @@ copyright_holder = Johan Lindstrom
 
 [NextRelease]
 time_zone = UTC
-format = %-6v -- %{yyyy-MM-dd HH:mm:ss VVVV}d
+format = %v -- %{yyyy-MM-dd HH:mm:ss VVVV}d
 
 
 
