dist.ini Git push

--- a/source/dist.ini
+++ b/source/dist.ini
@@ -32,7 +32,7 @@ copyright_holder = Johan Lindstrom
 [Git::Commit]
 [Git::Tag]
 ; [Git::CommitBuild]
-; [XXGit::Push]
+[Git::Push]
 [Git::NextVersion]
 
 
