--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /source/lib/App/Pebble/Plugin/Parser/Dynamite.pm
 /source/example
 /source/App-Pebble-*
+/source/lib/App/Pebble/Plugin/Source/Dynamite.pm
+/source/lib/App/Pebble/Plugin/Source/Ion.pm
