--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /source/App-Pebble-*
 /source/lib/App/Pebble/Plugin/Source/Dynamite.pm
 /source/lib/App/Pebble/Plugin/Source/Ion.pm
+/source/lib/App/Pebble/Plugin/Source/Pips.pm
